Add yes/no suspect deception, start finish study disable

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -65,6 +65,24 @@
         Once all the data are collected and analyzed for this project, we plan on sharing this information with
         the research community through seminars, conferences, presentations, and journal articles.
     </p>
+
+    <div class="card-text">
+        <div>During the study, did you suspect that you had been given false information about your performance?</div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="deception" id="deception_no">
+            <label class="form-check-label" for="deception_no"> No </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="deception" id="deception_yes">
+            <label class="form-check-label" for="deception_yes"> Yes </label>
+        </div>
+        <br>
+        <div>
+            <label class="form-check-label" for="text_deception"> Do you have any comments? (optional)</label>
+            <textarea class="form-control" id="text_deception" rows="2"></textarea>
+        </div>
+    </div>
+    <br>
     <p class="card-text">
         <b style="font-size: 20px">Post-debriefing consent form</b>
         <div class="form-check">
@@ -82,14 +100,6 @@
         If you have questions about the use of partial deception in this study, please contact the researcher
         Julia Schulz at <a href="mailto:s8juschu@stud.uni-saarland.de"
                            target="_BLANK">s8juschu@stud.uni-saarland.de</a>.
-    </p>
-    <p class="card-text">
-        <div class="form-group">
-            <label for="suspect_deception">
-                During the study, did you suspect that you had been given false information about your performance?
-            </label>
-            <textarea class="form-control" id="suspect_deception" rows="2"></textarea>
-        </div>
     </p>
     <br>
     <!-- Button trigger modal -->
