--- a/SinglePage/templates/cards/panas_main.html
+++ b/SinglePage/templates/cards/panas_main.html
@@ -20,7 +20,7 @@
                     {% for item in panas %}
                     <div class="row">
                         <div class="col-lg-3" style="margin-right: -8% !important; padding-left: 0% !important">
-                            <div id="errorPANASmain{{ forloop.counter }}" class="col-md-1 error_sub error_question"></div>
+                            <div id="errorPANASmain{{ forloop.counter }}" class="error_sub error_question"></div>
                             <b>{{forloop.counter}}. {{item}}</b>
                         </div>
                         <div class="col-lg-9">
