--- a/SinglePage/templates/base.html
+++ b/SinglePage/templates/base.html
@@ -107,7 +107,7 @@
     {#Save progressbar status#}
     let progressCounter = {{ progress }};
     {#Save max nr of cards#}
-    let maxValue = {{ overall_count }} - 1;
+    let maxValue = {{ overall_count }} - 1
 
 </script>
 <script src="{% static 'js/script.js' %}"></script>
