Add new framing sentences and fix xmlhhtp race

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -39,11 +39,13 @@
         {% endif %}
         {% if framing == 1 %}
             You were in the positive framing condition. This means that you were presented with the positive statement:
-            "Thank you for your answers so far. In the previous round you answered 7 out of 8 tasks correctly."
+            "Very good, that’s an excellent beginning. In the last round, your performance has exceeded our expectations.
+            You’ll surely do well in the next round!"
         {% endif %}
         {% if framing == 2 %}
             You were in the negative framing condition. This means that you were presented with the negative statement:
-            "Thank you for your answers so far. In the previous round you answered 2 out of 8 tasks correctly."
+            "Well, that’s a start. In the last round, your performance was not what we expected.
+            Hopefully you can do a little better in the next round!."
         {% endif %}
     </p>
     <p class="card-text">
