--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -18,17 +18,23 @@
                 {% endif %}
                 {% if framing == 1 %}
                     <!--Positive Framing-->
-                    Thank you for your answers so far. Number of correctly answered tasks in the last round:
-                    <br>
-                    <b style="color: #006dcc; font-size: 21px">7 out of 8</b> tasks <b>correct</b>
-                    <br>
+{#                    Thank you for your answers so far. Number of correctly answered tasks in the last round:#}
+{#                    <br>#}
+{#                    <b style="color: #006dcc; font-size: 21px">7 out of 8</b> tasks <b>correct</b>#}
+{#                    <br>#}
+                        Very good, that’s an excellent beginning.
+                        In the last round, your performance has exceeded our expectations.<br>
+                        You’ll surely do well in the next round!
                 {% endif %}
                 {% if framing == 2 %}
                     <!--Negative Framing-->
-                    Thank you for your answers so far. Number of correctly answered tasks in the last round:
-                    <br>
-                    <b style="color: #006dcc; font-size: 21px">2 out of 8</b> tasks <b>correct</b>
-                    <br>
+{#                    Thank you for your answers so far. Number of correctly answered tasks in the last round:#}
+{#                    <br>#}
+{#                    <b style="color: #006dcc; font-size: 21px">2 out of 8</b> tasks <b>correct</b>#}
+{#                    <br>#}
+                        Well, that’s a start.
+                        In the last round, your performance was not what we expected. <br>
+                        Hopefully you can do a little better in the next round!
                 {% endif %}
             </p>
             <p class="card-text">
@@ -49,21 +55,21 @@
                 <div>
                     Cognitive Ability Tasks
                 </div>
-                {% if framing == 0 %}
-                    <!--Control Group-->
-                {% endif %}
-                {% if framing == 1 %}
-                    <!--Positive Framing-->
-                    <div class="sticky9">
-                        Correct answers 1<sup>st</sup> round: 7/8
-                    </div>
-                {% endif %}
-                {% if framing == 2 %}
-                    <!--Negative Framing-->
-                    <div class="sticky9">
-                        Correct answers 1<sup>st</sup> round: 2/8
-                    </div>
-                {% endif %}
+{#                {% if framing == 0 %}#}
+{#                    <!--Control Group-->#}
+{#                {% endif %}#}
+{#                {% if framing == 1 %}#}
+{#                    <!--Positive Framing-->#}
+{#                    <div class="sticky9">#}
+{#                        Correct answers 1<sup>st</sup> round: 7/8#}
+{#                    </div>#}
+{#                {% endif %}#}
+{#                {% if framing == 2 %}#}
+{#                    <!--Negative Framing-->#}
+{#                    <div class="sticky9">#}
+{#                        Correct answers 1<sup>st</sup> round: 2/8#}
+{#                    </div>#}
+{#                {% endif %}#}
             </div>
         </div>
         <div class="progress">
@@ -117,21 +123,21 @@
                 <div>
                     Cognitive Ability Tasks
                 </div>
-               {% if framing == 0 %}
-                   <!--Control Group-->
-               {% endif %}
-               {% if framing == 1 %}
-                   <!--Positive Framing-->
-                   <div class="sticky10">
-                       Correct answers 1<sup>st</sup> round: 7/8
-                   </div>
-               {% endif %}
-               {% if framing == 2 %}
-                   <!--Negative Framing-->
-                   <div class="sticky10">
-                       Correct answers 1<sup>st</sup> round: 2/8
-                   </div>
-               {% endif %}
+{#               {% if framing == 0 %}#}
+{#                   <!--Control Group-->#}
+{#               {% endif %}#}
+{#               {% if framing == 1 %}#}
+{#                   <!--Positive Framing-->#}
+{#                   <div class="sticky10">#}
+{#                       Correct answers 1<sup>st</sup> round: 7/8#}
+{#                   </div>#}
+{#               {% endif %}#}
+{#               {% if framing == 2 %}#}
+{#                   <!--Negative Framing-->#}
+{#                   <div class="sticky10">#}
+{#                       Correct answers 1<sup>st</sup> round: 2/8#}
+{#                   </div>#}
+{#               {% endif %}#}
             </div>
         </div>
         <div class="progress">
