End card display textbox only if deception detected

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -77,12 +77,16 @@
         <div class="form-check">
             <input class="form-check-input" type="radio" name="deception" id="deception_yes">
             <label class="form-check-label" for="deception_yes"> Yes </label>
+            <div id="div_text_deception" style="display: none;">
+                <label class="form-check-label" for="text_deception">Based on what factors did you determine the deception?</label>
+                <textarea class="form-control" id="text_deception" rows="2"></textarea>
+            </div>
         </div>
-        <br>
-        <div>
-            <label class="form-check-label" for="text_deception"> Do you have any comments? (optional)</label>
-            <textarea class="form-control" id="text_deception" rows="2"></textarea>
-        </div>
+{#        <br>#}
+{#        <div>#}
+{#            <label class="form-check-label" for="text_deception"> Do you have any comments? (optional)</label>#}
+{#            <textarea class="form-control" id="text_deception" rows="2"></textarea>#}
+{#        </div>#}
     </div>
     <br>
     <p class="card-text">
