Only progress if xmlhhtpRequest was successfull, prevent offline progress

--- a/SinglePage/templates/cards/imi_pre.html
+++ b/SinglePage/templates/cards/imi_pre.html
@@ -31,7 +31,7 @@
             </p>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
+            <a class="btn btn-next" onclick="displayCards(); "> Continue</a>
         </div>
     </div>
 </div>
