--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -28,7 +28,7 @@
 {#    <div class="card">#}
 {#         {% include 'cards/voluntary.html' %}#}
 {#        <div class="modal-footer" id="btn-next">#}
-{#                <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>#}
+{#                <a class="btn btn-next" onclick="displayCards(); "> Continue</a>#}
 {#        </div>#}
 {#    </div>#}
 {#</div>#}
@@ -36,7 +36,7 @@
 {#    <div class="card">#}
 {#         {% include 'cards/volunt_task.html' %}#}
 {#        <div class="modal-footer" id="btn-next">#}
-{#            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>#}
+{#            <a class="btn btn-next" onclick="displayCards(); "> Continue</a>#}
 {#        </div>#}
 {#    </div>#}
 {#</div>#}
