Change statement last card

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -28,9 +28,8 @@
         competence.
         The framing effect describes that our decisions are influenced by the way information is presented.
         Therefore, each participant was randomly assigned to one of three groups: Either they were told
-        after the first 8 tasks and the first questionnaire that they answered 2/8 tasks right or 7/8, or they were
-        given a
-        neutral sentence asking them to continue the study.
+        after the first 8 tasks and the first questionnaire that their performance has exceeded our expectations or was
+        not what we expected, or they were given a neutral sentence asking them to continue the study.
     <p>
     <p class="card-text">
         {% if framing == 0 %}
