--- a/SinglePage/templates/finish.html
+++ b/SinglePage/templates/finish.html
@@ -12,7 +12,7 @@
                 </p>
             </div>
             <div class="modal-footer" id="finish">
-                <a href="https://www.prolific.co/" class="btn btn-primary">Return to prolific</a>
+                <a href="https://app.prolific.co/submissions/complete?cc=4FED7A67" class="btn btn-primary">Return to prolific</a>
             </div>
         </div>
 </div>
