--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -24,23 +24,23 @@
 {% include 'cards/task_main.html' %}
 {% include 'cards/imi_main.html' %}
 {% include 'cards/panas_main.html' %}
-{#<div class="container" id="card12" style="display: none;">#}
-{#    <div class="card">#}
-{#         {% include 'cards/voluntary.html' %}#}
-{#        <div class="modal-footer" id="btn-next">#}
-{#                <a class="btn btn-next" onclick="displayCards(); "> Continue</a>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
-{#<div class="container" id="card13" style="display: none;">#}
-{#    <div class="card">#}
-{#         {% include 'cards/volunt_task.html' %}#}
-{#        <div class="modal-footer" id="btn-next">#}
-{#            <a class="btn btn-next" onclick="displayCards(); "> Continue</a>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
-<div class="container" id="card14" name="end" style="display: none;">
+<div class="container" id="card14" style="display: none;">
+    <div class="card">
+         {% include 'cards/voluntary.html' %}
+        <div class="modal-footer" id="btn-next">
+                <a class="btn btn-next" onclick="displayCards(); "> Continue</a>
+        </div>
+    </div>
+</div>
+<div class="container" id="card15" style="display: none;">
+    <div class="card">
+         {% include 'cards/volunt_task.html' %}
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="displayCards(); "> Continue</a>
+        </div>
+    </div>
+</div>
+<div class="container" id="card16" name="end" style="display: none;">
     <div class="card">
          {% include 'cards/end.html' %}
     </div>
