--- a/SinglePage/templates/cards/voluntary.html
+++ b/SinglePage/templates/cards/voluntary.html
@@ -1,5 +1,5 @@
 <div class="card-header text-white">
-    End
+    Additional tasks
 </div>
 <div class="progress">
     <div class="progress-bar" role="progressbar" aria-valuenow="0"
@@ -9,8 +9,10 @@
 </div>
 <div class="card-body">
     <p class="card-text">
-        END OF MAIN STUDY. MORE TASKS?
+        On the following page, you can answer up to 8 more cognitive ability tasks to earn additonal badges and get further
+        evaluation of your performance. This part is optional.
+        <br>
+        <br>
+        Do you want to solve more tasks and have the possibility to earn more badges?
     </p>
-   <a class="btn btn-danger" onclick=""> Yes</a>
-    <a class="btn btn-success" onclick=""> NO</a>
 </div>
