Display extra task score on last page

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -15,6 +15,9 @@
         <br>
         We greatly appreciate your participation in our study, and thank you for spending the time helping us with our
         research.
+
+        <br>
+        <span id="actual_score_extra"></span> <span id="actual_score_count"></span>
     </p>
     <p class="card-text">
         <b style="font-size: 20px">Clarification of Study Goal</b>
