Start adding badges

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -15,9 +15,6 @@
         <br>
         We greatly appreciate your participation in our study, and thank you for spending the time helping us with our
         research.
-
-        <br>
-        <span id="actual_score_extra"></span> <span id="actual_score_count"></span>
     </p>
     <p class="card-text">
         <b style="font-size: 20px">Clarification of Study Goal</b>
@@ -52,8 +49,9 @@
     </p>
     <p class="card-text">
         In reality, the framing condition you were presented with did not reflect your performance and was purely
-        random. In fact, you answered <span id="actual_score_pre"></span> out of 8 tasks correctly in the first round. In
-        the second round,  you answered <span id="actual_score_main"></span> out of 8 tasks correctly.
+        random. In fact, you answered <b><span id="actual_score_pre"></span> out of 8 tasks </b> correctly in the first round. In
+        the second round,  you answered <b><span id="actual_score_main"></span> out of 8 tasks </b> correctly.
+        <span id="actual_score_extra"></span> <span id="actual_score_count"></span>
         We could not give participants complete information about the study prior to their participation, as this could
         have influenced their behavior during the study in a way that would have invalidated investigations of the
         research question. The reason for the deception in this study was to keep participants' behaviors and attitudes
