--- a/SinglePage/templates/cards/voluntary.html
+++ b/SinglePage/templates/cards/voluntary.html
@@ -9,10 +9,9 @@
 </div>
 <div class="card-body">
     <p class="card-text">
-        On the following page, you can answer up to 8 more cognitive ability tasks to earn additonal badges and get further
-        evaluation of your performance. This part is optional.
+        On the following page, you can answer up to 8 more cognitive ability tasks. This part is optional.
         <br>
         <br>
-        Do you want to solve more tasks and have the possibility to earn more badges?
+        Do you want to solve more tasks?
     </p>
 </div>
