--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -86,10 +86,33 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="saveTask('m1')"> Continue</a>
+            <button type="button" class="btn btn-next" data-toggle="modal" data-target="#badgeFirstModal">
+              Continue
+            </button>
+        </div>
+        <div class="modal fade" id="badgeFirstModal" tabindex="-1" role="dialog" aria-labelledby="badgeFirstModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="badgeFirstModalLabel">New badge unlocked</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="{% static "img/silverBadge.png" %}" alt="">
+                        <p>IQ Novice - Good performance</p>
+                    </div>
+                    <div class="modal-footer">
+                         <a class="btn btn-next" {# onclick="saveTask('m1')" #} data-dismiss="modal">Collect!</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 <div class="container" id="card10" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
@@ -154,7 +177,29 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="saveTask('m2')"> Continue</a>
+            <button type="button" class="btn btn-next" data-toggle="modal" data-target="#badgeSecondModal">
+              Continue
+            </button>
+        </div>
+        <div class="modal fade" id="badgeSecondModal" tabindex="-1" role="dialog" aria-labelledby="badgeSecondModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="badgeSecondModalLabel">New badge unlocked</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="{% static "img/goldBadge.png" %}" alt="">
+                        <p>IQ Master - Improved performance</p>
+                    </div>
+                    <div class="modal-footer">
+                         <a class="btn btn-next" {#onclick="saveTask('m2')" #} data-dismiss="modal">Collect!</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
