--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -105,7 +105,7 @@
                         <p>IQ Novice - Good performance</p>
                     </div>
                     <div class="modal-footer">
-                         <a class="btn btn-next" onclick="saveTask('m1')" data-dismiss="modal">Collect!</a>
+                         <a class="btn btn-next" {#onclick="saveTask('m1')"#} data-dismiss="modal">Collect!</a>
                     </div>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                         <p>IQ Master - Improved performance</p>
                     </div>
                     <div class="modal-footer">
-                         <a class="btn btn-next" onclick="saveTask('m2')" data-dismiss="modal">Collect!</a>
+                         <a class="btn btn-next" {# onclick="saveTask('m2')"#} data-dismiss="modal">Collect!</a>
                     </div>
                 </div>
             </div>
